Bug 86726. Don't enqueue reflows if we haven't yet done an initial reflow. r=karnaze, sr=hyatt.